--- a/detail.html
+++ b/detail.html
@@ -60,6 +60,7 @@
                 <li><a class="menu-a" href="giohang.html">HỖ TRỢ</a></li>
             </ul>
         </div>
+        <!-- nội dung -->
         <div class="detail-title">
             <div class="h5-detail">Nội dung phim</div>
             <span class="line-detail"></span>
