fix gòi fix gòi

--- a/admin-addmovie.html
+++ b/admin-addmovie.html
@@ -162,6 +162,7 @@
                                                                     <select class="input-sua" name="" id="">
                                                                         <option value="1">Đang khởi chiếu</option>
                                                                         <option value="2">Sắp khởi chiếu</option>
+                                                                        <option value="3">Đã chiếu xong</option>
                                                                     </select>
                                                                 </div>
                                                                 <div class="ad-phim">
@@ -195,22 +196,13 @@
                                 <div>THE CONJURING: MA XUI QUỶ KHIẾN</div>
                             </td>
                             <td>Taylor Sheridan</td>
-                            <!-- <td>Taylor Sheridan, Angelina Jolie</td> -->
                             <td>05/11/2021</td>
                             <td>Hành động</td>
                             <td>
                                 <img class="img-cs" style="width:50px" src="img/cs18.png">
                             </td>
-                            <!-- <td class="chitiet-movie">Angelina Jolie tái xuất với siêu phẩm
-                                hành động nghẹt thở cùng biên kịch được đề cử Oscar -
-                                Taylor Sheridan Kẻ Nguyền Ta Chết xoay quanh cuộc truy
-                                sát kinh hoàng giữa băng đảng giết thuê và cậu bé Connor -
-                                nhân chứng cuối cùng của một vụ trọng án.</td> -->
-                            <td style="text-align: center;">
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-                                    <label class="form-check-label" for="flexSwitchCheckChecked"></label>
-                                  </div>
+                            <td >
+                                <div>Đang khởi chiếu</div>
                             </td>
                                 <td>
                                     <div class="ad-btn"style="width:60px">
@@ -306,6 +298,7 @@
                                                                 <select class="input-sua" name="" id="">
                                                                     <option value="1">Đang khởi chiếu</option>
                                                                     <option value="2">Sắp khởi chiếu</option>
+                                                                    <option value="3">Đã chiếu xong</option>
                                                                 </select>
                                                             </div>
                                                             <div class="ad-phim">
